--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DeltaHackathon">
         <activity
+            android:name=".GameActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.DeltaHackathon.noActionBar"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.DeltaHackathon.noActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
